Updated skills and added auto merge using bot user